--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -52,5 +52,6 @@
     <string name="time10">19.00-21.00</string>
     <string name="time11">21.00-23.00</string>
     <string name="time12">23.00-01.00</string>
+    <string name="nullValue">Nothing to do at this time :)</string>
 
 </resources>
